Added blog post sample

--- a/_factory_blog_post.html
+++ b/_factory_blog_post.html
@@ -6,15 +6,203 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
+        <title>Blog Post</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this template -->
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
-</div>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-blog-post-1</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-blog-post-1 pt-3">
+            <div class="container-xl">
+                <div class="row">
+                    <div class="col-12 pe-md-0 ps-md-0">
+                        <div class="pd-blog-post-1-image-outer">
+                            <picture>
+                                <source srcset="/images/uploads/blog-post-1.webp 2000w, 
+                                                /images/uploads/blog-post-1-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 64px), 2000px" type="image/webp"> 
+                                <img srcset="/images/uploads/blog-post-1.jpg 2000w, 
+                                                /images/uploads/blog-post-1-mob.jpg 820w" sizes="(max-width: 600px) calc(100vw - 64px), 2000px" src="/images/uploads/blog-post-1.jpg">
+                            </picture>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+            <div class="container-xl">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="pd-blog-post-1-content-outer">
+                            <header class="pd-blog-post-1-header">
+                                <p class="pd-blog-post-1-category">Recruitment Software</p>
+                                <h1 class="pd-blog-post-1-headline">The Roots of Recruitment - from Boots to Spacesuits</h1>
+                                <div class="pd-blog-post-1-author-outer">
+                                    <div class="pd-blog-post-1-author-inner">
+                                        <img src="images/uploads/testimonial-woman-2.jpg">
+                                        <div class="ps-2">
+                                            <p class="pd-blog-post-1-author-name">Kay Allsop <span>- 21 Dec 2021</span></p>
+                                            <p class="pd-blog-post-1-author-role">HR Director</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="pd-blog-post-1-social-outer">
+                                    <a name="anchor" href="#"><img alt="icon for email" width="32" height="32" src="images/design-assets/icon-email-primary.svg"></a>
+                                    <a name="anchor" href="#"><img src="images/design-assets/icon-facebook-share.svg" alt="icon for facebook" width="32" height="32"></a>
+                                    <a name="anchor" href="#"><img alt="icon for twitter" width="32" height="32" src="images/design-assets/icon-twitter-share.svg"></a>
+                                    <a name="anchor" href="#"><img alt="icon for linkedin" width="32" height="32" src="images/design-assets/icon-linkedin-share.svg"></a>
+                                </div>
+                            </header>
+                            <div class="pd-blog-post-1-main">
+                                <p>Aenean in auctor eros. Vestibulum ac metus consectetur, venenatis magna id, vestibulum arcu. Donec at massa iaculis, cursus dolor eget, vestibulum ex. magna pellentesque. Vivamus congue, <a href="#">sapien vitae</a> malesuada porttitor, mauris mauris scelerisque sapien, nec scelerisque risus mi ut enim. Curabitur sit amet lorem ipsum. Praesent pulvinar elit ipsum, et laoreet velit malesuada eu. Donec laoreet blandit lorem et efficitur. <strong>Praesent hendrerit ante in quam laoreet, vel venenatis.</strong> Morbi blandit tincidunt aliquam. Proin ullamcorper orci id augue molestie, vitae porta massa sodales.</p>
+                                <h2>Heading 2</h2>
+                                <p>Morbi id accumsan ligula, sit amet mattis ipsum. Curabitur et iaculis massa. Pellentesque libero metus, convallis non consectetur vel, maximus eu leo. Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
+                                <blockquote>
+                                    <strong>Urabitur laoreet</strong> mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.
+                                </blockquote>
+                                <p>Morbi id accumsan ligula, sit amet mattis ipsum. Curabitur et iaculis massa. Pellentesque libero metus, convallis non consectetur vel, maximus eu leo. Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
+                                <h3>Heading 3</h3>
+                                <p>Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
+                                <ul>
+                                    <li>Donec laoreet blandit lorem et efficitur</li>
+                                    <li>Nullam id lacus in nunc pellentesque efficitur a ac tortor</li>
+                                    <li>Pellentesque ultrices suscipit condimentum</li>
+                                </ul>
+                                <p>Proin commodo malesuada orci non iaculis. Pellentesque a orci eget nisi mattis vestibulum. Etiam ut augue sit amet dui imperdiet consequat a ultricies augue. Integer et scelerisque massa, ut dapibus erat. Integer accumsan est eu neque feugiat dapibus. Donec rutrum ornare sapien a sollicitudin. Suspendisse eget enim magna. Nunc augue magna, congue a viverra vitae, feugiat vel est. Mauris rutrum purus non urna bibendum, in placerat orci luctus.</p>
+                                <h4>Heading 4</h4>
+                                <p>Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
+                            </div>
+                            <div class="pd-blog-post-1-share-article">
+                                <p>Share this article</p>
+                                <div>
+                                    <a name="anchor" href="#"><img src="images/design-assets/icon-email-primary.svg" alt="icon for sharing by email" width="32" height="32"></a>
+                                    <a name="anchor" href="#"><img src="images/design-assets/icon-facebook-share.svg" alt="icon for facebook" width="32" height="32"></a>
+                                    <a name="anchor" href="#"><img alt="icon for twitter" width="32" height="32" src="images/design-assets/icon-twitter-share.svg"></a>
+                                    <a name="anchor" href="#"><img alt="icon for linkedin" width="32" height="32" src="images/design-assets/icon-linkedin-share.svg"></a>
+                                </div>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pd-cards-posts-1 pt-5">
+            <div class="container pb-4">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 style="font-weight: 700; font-size: 1.4rem;">You also might like to read:</h3>                          
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 d-flex flex-column mb-4">
+                        <div class="pd-cards-posts-1-card-outer">
+                            <div class="pd-cards-posts-1-image-outer">
+                                <a href="#" name="anchor"><picture>
+                                        <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
+                                        <img src="/images/uploads/cards-sample-1.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
+                                    </picture></a>
+                                <div class="pd-cards-posts-1-categories-outer">
+                                    <a href="#" name="anchor" class="pd-cards-posts-1-category">Software</a>
+                                </div>
+                            </div>
+                            <div class="pd-cards-posts-1-text">
+                                <header>
+                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p>
+                                    <a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>The Roots of Recruitment - from Boots to Spacesuits</h3></a>
+                                </header>
+                                <div class="pd-cards-posts-1-body-text">
+                                    <p>Sed lacinia sem non lacinia pellentesque. Pellentesque ligula enim, accumsan ac urna at, semper interdum orci.</p>
+                                </div>
+                                <div class="pd-cards-posts-1-tags-outer">
+                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20">
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
+                            </div>
+                        </div>                         
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex flex-column mb-4">
+                        <div class="pd-cards-posts-1-card-outer">
+                            <div class="pd-cards-posts-1-image-outer">
+                                <a href="#" name="anchor"><picture>
+                                        <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
+                                        <img src="/images/uploads/cards-sample-2.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
+                                    </picture></a>
+                                <div class="pd-cards-posts-1-categories-outer">
+                                    <a href="#" name="anchor" class="pd-cards-posts-1-category">Recruitment</a>
+                                </div>
+                            </div>
+                            <div class="pd-cards-posts-1-text">
+                                <header>
+                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p>
+                                    <a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>How to supercharge your temp desk</h3></a>
+                                </header>
+                                <div class="pd-cards-posts-1-body-text">
+                                    <p>Sed lacinia sem non lacinia pellentesque. Pellentesque ligula enim, accumsan ac urna at, semper interdum orci.</p>
+                                </div>
+                                <div class="pd-cards-posts-1-tags-outer">
+                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20">
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
+                            </div>
+                        </div>                         
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex flex-column mb-4">
+                        <div class="pd-cards-posts-1-card-outer">
+                            <div class="pd-cards-posts-1-image-outer">
+                                <a href="#" name="anchor"><picture>
+                                        <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp">
+                                        <img src="/images/uploads/cards-sample-3.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
+                                    </picture></a>
+                                <div class="pd-cards-posts-1-categories-outer">
+                                    <a href="#" name="anchor" class="pd-cards-posts-1-category">Optimizing staffing</a>
+                                </div>
+                            </div>
+                            <div class="pd-cards-posts-1-text">
+                                <header>
+                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p>
+                                    <a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>The real solution to realtime communication</h3></a>
+                                </header>
+                                <div class="pd-cards-posts-1-body-text">
+                                    <p>Sed lacinia sem non lacinia pellentesque. Pellentesque ligula enim, accumsan ac urna at, semper interdum orci.</p>
+                                </div>
+                                <div class="pd-cards-posts-1-tags-outer">
+                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20">
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Recruitment software</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-blog-post-2</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
