--- a/_factory_blog_post.html
+++ b/_factory_blog_post.html
@@ -64,6 +64,7 @@
                                     <strong>Urabitur laoreet</strong> mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.
                                 </blockquote>
                                 <p>Morbi id accumsan ligula, sit amet mattis ipsum. Curabitur et iaculis massa. Pellentesque libero metus, convallis non consectetur vel, maximus eu leo. Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
+                                <img src="http://pinegrow.com/placeholders/img15.jpg">
                                 <h3>Heading 3</h3>
                                 <p>Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
                                 <ul>
@@ -93,7 +94,7 @@
             <div class="container pb-4">
                 <div class="row">
                     <div class="col-12">
-                        <h3 style="font-weight: 700; font-size: 1.4rem;">You also might like to read:</h3>                          
+                        <h3 style="font-weight: 700; font-size: 1.4rem;">You also might like to read:</h3> 
                     </div>
                 </div>
             </div>
