--- a/_factory_blog_post.html
+++ b/_factory_blog_post.html
@@ -64,7 +64,7 @@
                                     <strong>Urabitur laoreet</strong> mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.
                                 </blockquote>
                                 <p>Morbi id accumsan ligula, sit amet mattis ipsum. Curabitur et iaculis massa. Pellentesque libero metus, convallis non consectetur vel, maximus eu leo. Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
-                                <img src="http://pinegrow.com/placeholders/img15.jpg">
+                                <img src="https://pinegrow.com/placeholders/img15.jpg">
                                 <h3>Heading 3</h3>
                                 <p>Morbi nec leo id sapien pulvinar vulputate. Nullam id lacus in nunc pellentesque efficitur a ac tortor. Curabitur laoreet mi et est lobortis, eget consectetur felis condimentum. Phasellus efficitur orci vel pharetra maximus.</p>
                                 <ul>
