Added the grid for people plus video

--- a/_factory_people.html
+++ b/_factory_people.html
@@ -288,6 +288,250 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-people-2</p>
             </div>
         </section>
+        <section class="pb-5 pd-people-2 pt-5">
+            <div class="container pb-3">
+                <div class="row">
+                    <header class="col pb-2 text-center">
+                        <h2 class="mb-3">Our Team</h2> 
+                        <div class="pd-people-2-headline">
+                            <p><strong>Meet the humans behind Scissors</strong></p>
+                        </div>
+                        <div class="pd-people-2-subHeadline">
+                            <p>Temp staffing is our job - connecting people is what we do</p>
+                        </div>                         
+                    </header>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 pb-3">
+                        <div class="pd-people-2-card-outer">
+                            <div class="pd-people-2-card-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/profile-woman.jpg" type="image/webp">
+                                    <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-woman.jpg">
+                                </picture>
+                            </div>
+                            <div class="pd-people-2-card-video-outer">
+                                <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                    <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                </video>
+                            </div>
+                            <div class="pd-people-2-card-profile-text">
+                                <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-lg-4 col-md-6 pb-3">
+                        <div class="pd-people-2-card-outer">
+                            <div class="pd-people-2-card-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/profile-man.jpg" type="image/webp">
+                                    <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-man.jpg">
+                                </picture>
+                            </div>
+                            <div class="pd-people-2-card-video-outer">
+                                <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                    <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                </video>
+                            </div>
+                            <div class="pd-people-2-card-profile-text">
+                                <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-lg-4 col-md-6 pb-3">
+                        <div class="pd-people-2-card-outer">
+                            <div class="pd-people-2-card-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/profile-woman-2.jpg" type="image/webp">
+                                    <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-woman-2.jpg">
+                                </picture>
+                            </div>
+                            <div class="pd-people-2-card-video-outer">
+                                <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                    <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                </video>
+                            </div>
+                            <div class="pd-people-2-card-profile-text">
+                                <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-lg-4 col-md-6 pb-3">
+                        <div class="pd-people-2-card-outer">
+                            <div class="pd-people-2-card-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/profile-woman-3.jpg" type="image/webp">
+                                    <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-woman-3.jpg">
+                                </picture>
+                            </div>
+                            <div class="pd-people-2-card-video-outer">
+                                <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                    <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                </video>
+                            </div>
+                            <div class="pd-people-2-card-profile-text">
+                                <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-lg-4 col-md-6 pb-3">
+                        <div class="pd-people-2-card-outer">
+                            <div class="pd-people-2-card-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/profile-man-2.jpg" type="image/webp">
+                                    <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-man-2.jpg">
+                                </picture>
+                            </div>
+                            <div class="pd-people-2-card-video-outer">
+                                <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                    <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                </video>
+                            </div>
+                            <div class="pd-people-2-card-profile-text">
+                                <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="col-lg-4 col-md-6 pb-3">
+                        <div class="pd-people-2-card-outer">
+                            <div class="pd-people-2-card-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/profile-man-3.jpg" type="image/webp">
+                                    <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-man-3.jpg">
+                                </picture>
+                            </div>
+                            <div class="pd-people-2-card-video-outer">
+                                <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                    <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                </video>
+                            </div>
+                            <div class="pd-people-2-card-profile-text">
+                                <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                            </div>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-people-3</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-people-3 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="pd-people-3-grid">
+                            <div class="pd-people-3-card-outer">
+                                <div class="pd-people-3-card-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/profile-woman.jpg" type="image/webp">
+                                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-woman.jpg">
+                                    </picture>
+                                </div>
+                                <div class="pd-people-3-card-video-outer">
+                                    <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                        <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                    </video>
+                                </div>
+                                <header class="pd-people-3-card-profile-text">
+                                    <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                                </header>
+                            </div>
+                            <div class="pd-people-3-card-outer">
+                                <div class="pd-people-3-card-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/profile-man.jpg" type="image/webp">
+                                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-man.jpg">
+                                    </picture>
+                                </div>
+                                <div class="pd-people-3-card-video-outer">
+                                    <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                        <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                    </video>
+                                </div>
+                                <header class="pd-people-3-card-profile-text">
+                                    <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                                </header>
+                            </div>
+                            <div class="pd-people-3-card-outer">
+                                <div class="pd-people-3-card-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/profile-woman-2.jpg" type="image/webp">
+                                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-woman-2.jpg">
+                                    </picture>
+                                </div>
+                                <div class="pd-people-3-card-video-outer">
+                                    <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                        <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                    </video>
+                                </div>
+                                <header class="pd-people-3-card-profile-text">
+                                    <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                                </header>
+                            </div>
+                            <div class="pd-people-3-card-outer">
+                                <div class="pd-people-3-card-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/profile-woman-3.jpg" type="image/webp">
+                                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-woman-3.jpg">
+                                    </picture>
+                                </div>
+                                <div class="pd-people-3-card-video-outer">
+                                    <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                        <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                    </video>
+                                </div>
+                                <header class="pd-people-3-card-profile-text">
+                                    <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                                </header>
+                            </div>
+                            <div class="pd-people-3-card-outer">
+                                <div class="pd-people-3-card-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/profile-man-2.jpg" type="image/webp">
+                                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-man-2.jpg">
+                                    </picture>
+                                </div>
+                                <div class="pd-people-3-card-video-outer">
+                                    <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                        <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                    </video>
+                                </div>
+                                <header class="pd-people-3-card-profile-text">
+                                    <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                                </header>
+                            </div>
+                            <div class="pd-people-3-card-outer">
+                                <div class="pd-people-3-card-image-outer">
+                                    <picture>
+                                        <source srcset="/images/uploads/profile-man-3.jpg" type="image/webp">
+                                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-man-3.jpg">
+                                    </picture>
+                                </div>
+                                <div class="pd-people-3-card-video-outer">
+                                    <video loop preload="metadata" autoplay muted width="711" height="400" playsinline>
+                                        <source src="/assets/movies/video-sample.mp4">Your browser doesn't support HTML5 video tag.
+                                    </video>
+                                </div>
+                                <header class="pd-people-3-card-profile-text">
+                                    <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                                </header>
+                            </div>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-people-4</p>
+            </div>
+        </section>
+        <section class="pg-empty-placeholder" style="height: 600px;"></section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
