--- a/_factory_people.html
+++ b/_factory_people.html
@@ -320,7 +320,7 @@
                             <div class="pd-people-2-card-profile-text">
                                 <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-lg-4 col-md-6 pb-3">
                         <div class="pd-people-2-card-outer">
@@ -338,7 +338,7 @@
                             <div class="pd-people-2-card-profile-text">
                                 <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-lg-4 col-md-6 pb-3">
                         <div class="pd-people-2-card-outer">
@@ -356,7 +356,7 @@
                             <div class="pd-people-2-card-profile-text">
                                 <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-lg-4 col-md-6 pb-3">
                         <div class="pd-people-2-card-outer">
@@ -374,7 +374,7 @@
                             <div class="pd-people-2-card-profile-text">
                                 <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-lg-4 col-md-6 pb-3">
                         <div class="pd-people-2-card-outer">
@@ -392,7 +392,7 @@
                             <div class="pd-people-2-card-profile-text">
                                 <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-lg-4 col-md-6 pb-3">
                         <div class="pd-people-2-card-outer">
@@ -410,7 +410,7 @@
                             <div class="pd-people-2-card-profile-text">
                                 <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -421,6 +421,19 @@
             </div>
         </section>
         <section class="pb-5 pd-people-3 pt-5">
+            <div class="container pb-3">
+                <div class="row">
+                    <header class="col pb-2 text-center">
+                        <h2 class="mb-3">Our Team</h2> 
+                        <div class="pd-people-3-headline">
+                            <p><strong>Meet the humans behind Scissors</strong></p>
+                        </div>
+                        <div class="pd-people-3-subHeadline">
+                            <p>Temp staffing is our job - connecting people is what we do</p>
+                        </div>                         
+                    </header>
+                </div>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -521,7 +534,7 @@
                                     <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
                                 </header>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
