--- a/_factory_people.html
+++ b/_factory_people.html
@@ -467,7 +467,7 @@
                                     </video>
                                 </div>
                                 <header class="pd-people-3-card-profile-text">
-                                    <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat</p>
+                                    <p><strong>Nam varius sem neque:</strong> sit amet tempus ipsum ornare sit amet. Fusce sollicitudin <a href="#">vehicula quam</a> vel feugiat.&nbsp;</p>
                                 </header>
                             </div>
                             <div class="pd-people-3-card-outer">
