--- a/_factory_footers.html
+++ b/_factory_footers.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta name="description" content=""/>
+        <meta name="author" content=""/>
         <title>Footers</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
@@ -22,31 +22,27 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 pb-4 pb-lg-0 pe-3 ps-3 text-center text-md-start">
-                        <img src="images/design-assets/logo-scissors-white.svg" alt="scissors logo white" width="100" height="95" class="mb-3"> 
-                        <p><strong>Registered Office:</strong><br>
-Seaview, Trenoweth Road<br>
-Falmouth<br>
-Cornwall<br>
+                        <img src="images/design-assets/logo-scissors-white.svg" alt="scissors logo white" width="100" height="95" class="mb-3"/> 
+                        <p><strong>Registered Office:</strong><br/>
+Seaview, Trenoweth Road<br/>
+Falmouth<br/>
+Cornwall<br/>
 UK</p>
-                        <address class="align-items-center align-items-md-start d-flex flex-column justify-content-start pt-3"><a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-email-jewell.svg" alt="icon of email" width="24" height="24" class="me-2"></span>Email Us</a><a href="tel:07976361908" class="mt-3 pd-footer-1-tel"><span><img src="images/design-assets/icon-phone-jewell.svg" alt="icon image of phone" width="24" height="24" class="me-1"></span>+44 1234 456 789</a></address>
-                        <p class="pt-3"><strong>Company Number:</strong><br>
+                        <address class="align-items-center align-items-md-start d-flex flex-column justify-content-start pt-3"><a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-email-jewell.svg" alt="icon of email" width="24" height="24" class="me-2"/></span>Email Us</a><a href="tel:07976361908" class="mt-3 pd-footer-1-tel"><span><img src="images/design-assets/icon-phone-jewell.svg" alt="icon image of phone" width="24" height="24" class="me-1"/></span>+44 1234 456 789</a></address>
+                        <p class="pt-3"><strong>Company Number:</strong><br/>
 12345678910</p> 
                     </div>
                     <div class="col-lg-3 col-md-6 pb-4 pb-lg-0 pe-3 ps-3 text-center text-lg-start">
                         <h2>Latest News</h2>
                         <div class="pt-3">
                             <ul> 
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>                                 
                             </ul>
                         </div>                         
@@ -55,27 +51,20 @@ UK</p>
                         <h2>Useful Links</h2>
                         <div class="pt-3">
                             <ul> 
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>                                 
                             </ul>
                         </div>                         
                     </div>
                     <div class="col-lg-3 col-md-6 pb-4 pb-lg-0 pe-3 ps-3 text-center text-lg-start">
                         <h2>Social</h2>
-                        <div class="pt-3">
-                            <a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img src="images/design-assets/icon-facebook.svg" alt="icon of facebook" width="32" height="32"></a>
-                            <a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img alt="icon of twitter" width="32" height="32" src="images/design-assets/icon-twitter-white-01.svg"></a>
-                            <a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img alt="icon of linkedin" width="32" height="32" src="images/design-assets/icon-linkedin.svg"></a>
+                        <div class="pt-3"><a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img src="images/design-assets/icon-facebook.svg" alt="icon of facebook" width="32" height="32"/></a><a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img alt="icon of twitter" width="32" height="32" src="images/design-assets/icon-twitter-white-01.svg"/></a><a name="anchor" class="me-2 pd-footer-1-social-icon" href="#"><img alt="icon of linkedin" width="32" height="32" src="images/design-assets/icon-linkedin.svg"/></a>
                         </div>                         
                     </div>
                 </div>
@@ -87,8 +76,7 @@ UK</p>
                     <div class="col-md-6 pb-3 pb-lg-0 text-center text-md-start"> 
                         <p>Software built for the recruitment market</p> 
                     </div>
-                    <div class="col-md-6 text-center text-md-end"> 
-                        <a name="anchor" href="#"><strong>Website by: </strong> Pendigital Limited</a> 
+                    <div class="col-md-6 text-center text-md-end"> <a name="anchor" href="#"><strong>Website by: </strong> Pendigital Limited</a> 
                     </div>
                 </div>
             </div>
@@ -102,29 +90,25 @@ UK</p>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 pb-4 pb-lg-0 pe-3 ps-3 text-center text-md-start">
-                        <img alt="scissors logo white" width="100" height="95" class="mb-3" src="images/design-assets/logo-scissors.svg"> 
-                        <p><strong>Registered Office:</strong><br>Level 4<br> 
-    20 Emily Place<br> Auckland<br>
+                        <img alt="scissors logo white" width="100" height="95" class="mb-3" src="images/design-assets/logo-scissors.svg"/> 
+                        <p><strong>Registered Office:</strong><br/>Level 4<br/> 
+    20 Emily Place<br/> Auckland<br/>
     New Zealand</p>
-                        <address class="align-items-center align-items-md-start d-flex flex-column justify-content-start pt-3"><a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-email-jewell.svg" alt="icon of email" width="24" height="24" class="me-2"></span>Email Us</a><a href="tel:07976361908" class="mt-3 pd-footer-1-tel"><span><img alt="icon image of phone" width="24" height="24" class="me-1" src="images/design-assets/icon-phone-info-2.svg"></span>+44 1234 456 789</a></address>
-                        <p class="pt-3"><strong>Company Number:</strong><br>
+                        <address class="align-items-center align-items-md-start d-flex flex-column justify-content-start pt-3"><a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-email-jewell.svg" alt="icon of email" width="24" height="24" class="me-2"/></span>Email Us</a><a href="tel:07976361908" class="mt-3 pd-footer-1-tel"><span><img alt="icon image of phone" width="24" height="24" class="me-1" src="images/design-assets/icon-phone-info-2.svg"/></span>+44 1234 456 789</a></address>
+                        <p class="pt-3"><strong>Company Number:</strong><br/>
 12345678910</p> 
                     </div>
                     <div class="col-lg-3 col-md-6 pb-4 pb-lg-0 pe-3 ps-3 text-center text-lg-start">
                         <h2>Latest News</h2>
                         <div class="pt-3">
                             <ul> 
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>                                 
                             </ul>
                         </div>                         
@@ -133,27 +117,20 @@ UK</p>
                         <h2>Useful Links</h2>
                         <div class="pt-3">
                             <ul> 
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Item 1</a>
+                                <li><a href="#" name="anchor">Item 1</a>
                                 </li>                                 
                             </ul>
                         </div>                         
                     </div>
                     <div class="col-lg-3 col-md-6 pb-4 pb-lg-0 pe-3 ps-3 text-center text-lg-start">
                         <h2>Social</h2>
-                        <div class="pt-3">
-                            <a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of facebook" width="32" height="32" src="images/design-assets/icon-facebook-share.svg"></a>
-                            <a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of twitter" width="32" height="32" src="images/design-assets/icon-twitter-share.svg"></a>
-                            <a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of linkedin" width="32" height="32" src="images/design-assets/icon-linkedin-share.svg"></a>
+                        <div class="pt-3"><a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of facebook" width="32" height="32" src="images/design-assets/icon-facebook-share.svg"/></a><a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of twitter" width="32" height="32" src="images/design-assets/icon-twitter-share.svg"/></a><a name="anchor" class="me-2 pd-footer-2-social-icon" href="#"><img alt="icon of linkedin" width="32" height="32" src="images/design-assets/icon-linkedin-share.svg"/></a>
                         </div>                         
                     </div>
                 </div>
@@ -165,8 +142,7 @@ UK</p>
                     <div class="col-md-6 pb-3 pb-lg-0 text-center text-md-start"> 
                         <p>Software built for the recruitment market</p> 
                     </div>
-                    <div class="col-md-6 text-center text-md-end"> 
-                        <a name="anchor" href="#"><strong>Website by: </strong> Pendigital Limited</a> 
+                    <div class="col-md-6 text-center text-md-end"> <a name="anchor" href="#"><strong>Website by: </strong> Pendigital Limited</a> 
                     </div>
                 </div>
             </div>
