--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -33,7 +33,9 @@
                         </div>
                         <footer>
                             <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
-                            <div><a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a><a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"/></span>Watch how it works</a>
+                            <div>
+                                <a href="#" name="anchor" class="btn btn-info mb-2 me-2">Start Now</a>
+                                <a href="#" name="anchor" class="btn btn-outline-light mb-2"><span><img width="10" class="pd-hero-1-play-icon"/></span>Watch how it works</a>
                             </div>
                         </footer>                         
                     </div>
@@ -86,7 +88,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address"/>
                                     </div>
-                                    <button type="submit" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>
                                 </form>
                             </footer>
@@ -141,7 +144,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div class="mb-3">
                                         <input type="email" class="form-control" id="email" value="Enter your email address"/>
                                     </div>
-                                    <button type="submit" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>
                                 </form>
                             </footer>
@@ -195,7 +199,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -240,7 +245,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="/images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -298,7 +304,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -331,7 +338,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -369,7 +377,8 @@ Focus on retaining candidates and clients.</strong></p>
                                     <div> 
                                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter your email"/> 
                                     </div>                                     
-                                    <button type="submit" class="btn btn-info "><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
+                                    <button type="submit" class="btn btn-info ">
+                                        <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
                                     </button>                                     
                                 </form>
                             </footer>
@@ -395,8 +404,7 @@ Focus on retaining candidates and clients.</strong></p>
                         <div class="mb-4 mt-4 pb-3 pd-hero-9-text-outer pt-3">
                             <h1>SEO Optimized H1</h1>
                             <p class="pd-hero-9-headline">Nice big marketing headline</p>
-                            <p class="pd-hero-9-subHeadline">Sub headline to explain the large marketing headline</p>
-                            <a href="#" name="anchor" class="btn btn-outline-secondary"><span><img src="images/design-assets/icon-arrow-primary.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Find out more</a>
+                            <p class="pd-hero-9-subHeadline">Sub headline to explain the large marketing headline</p><a href="#" name="anchor" class="btn btn-outline-secondary"><img/>Find out more</a>
                         </div>                         
                     </div>
                     <div class="col-md-6 overflow-hidden pd-hero-9-col-image pe-0 pe-md-2 ps-0 ps-md-2">
